AFHS-1838 - Under 18 rule implementation
