# swagger.yml
@@ -372,16 +372,6 @@ definitions:
         - "not_supplied"
         - "invalid_format"
         - "not_set"
-      qualifyingBenefits:
-        type: "string"
-        enum:
-        - "universal_credit"
-        - "employment_and_support_allowance"
-        - "income_support"
-        - "jobseekers_allowance"
-        - "pension_credit"
-        - "child_tax_credit"
-        - "not_set"
       qualifyingReason:
         type: "string"
         enum:
